# ru-peteburg

./: README.MD
game/: Cargo.toml  cargorun.sh  logfile
game/assets/: app_properties.json  map.json
game/migrations/: init_tables.sql
game/src/: main.rs
game/src/core/: carbona.rs  db.rs  docdb.rs  element.rs  elements.rs  env.rs  envfa.rs  kindle.rs  mod.rs  wsock.rs
game/src/model/: mod.rs  uam.rs
game/src/sys/: db.rs  mod.rs
game/src/types/: fechain.rs  form.rs  mod.rs
server/: Cargo.toml  logfile
server/src/: main.rs
server/src/app/: comm.rs  mod.rs
