[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.3.25"
mongodb = "2.4.0"
bson = { version = "2.6.1", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4.24" # Used for setting DateTimes
serde = "1.0.160"
sqlx = {version = "0.5",features = [ "runtime-tokio-rustls", "migrate", "postgres" ]}
tokio = { version = "1.27", features = ["full"] }
warp = "0.3.4"