[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
warp = "0.3.4"
tokio = { version = "1.27", features = ["full"] }
tokio-stream = "0.1.12"
futures-util = "0.3.28" 
log = "0.4.17"
pretty_env_logger = "0.4.0"
glam = { version = "0.23.0", features = ["scalar-math","serde"] }
  serde = { version = "1.0.160", features = ["derive"] }
  serde_json = "1.0.96"